tests/cases/compiler-development/artifact/errors/diagnostic-ffi-nonrepr-aggregate-import.diagnostic
diagnostic error code=A0001 family=abi message="extern C import for by-value aggregate parameter Pair requires a @repr(C) struct; use an explicit C wrapper struct or raw pointer ABI" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-ffi-nonrepr-aggregate-import.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-ffi-nonrepr-aggregate-import.ari" bytes=194
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-ffi-nonrepr-aggregate-import.ari" line=6 column=39 end_line=6 end_column=43 byte_start=82 byte_end=86 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-ffi-nonrepr-aggregate-import.ari:6:39\n   |\n 6 | extern \"C\" fn ari_test_sum_pair(pair: Pair) -> i64;\n   |                                       ^^^^"
